--- a/views/chat.html
+++ b/views/chat.html
@@ -13,9 +13,88 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>IOC - Soulstone</title>
-        <script src="chat.js"></script>
-		<style type="text/css">
-			#sidebar-wrapper {
+        <script>
+          $(window).resize(function() {
+            var path = $(this);
+            var contW = path.width();
+            if(contW >= 751){
+              document.getElementsByClassName("sidebar-toggle")[0].style.right="200px";
+            }else{
+              document.getElementsByClassName("sidebar-toggle")[0].style.right="-200px";
+            }
+          });
+          $(document).ready(function() {
+            $('.dropdown').on('show.bs.dropdown', function(e){
+                $(this).find('.dropdown-menu').first().stop(true, true).slideDown(300);
+            });
+            $('.dropdown').on('hide.bs.dropdown', function(e){
+              $(this).find('.dropdown-menu').first().stop(true, true).slideUp(300);
+            });
+            $("#menu-toggle").click(function(e) {
+              e.preventDefault();
+              var elem = document.getElementById("sidebar-wrapper");
+              right = window.getComputedStyle(elem,null).getPropertyValue("right");
+              if(right == "200px"){
+                document.getElementsByClassName("sidebar-toggle")[0].style.right="-200px";
+              }
+              else if(right == "-200px"){
+                document.getElementsByClassName("sidebar-toggle")[0].style.right="200px";
+              }
+            });
+          });
+
+      $(function(){
+        $(".panel.panel-chat > .panel-heading > .chatMinimize").click(function(){
+            if($(this).parent().parent().hasClass('mini'))
+            {
+                $(this).parent().parent().removeClass('mini').addClass('normal');
+                $('.panel.panel-chat > .panel-body').animate({height: "250px"}, 500).show();
+                $('.panel.panel-chat > .panel-footer').animate({height: "75px"}, 500).show();
+            }
+            else
+            {
+                $(this).parent().parent().removeClass('normal').addClass('mini');
+                $('.panel.panel-chat > .panel-body').animate({height: "0"}, 500);
+                $('.panel.panel-chat > .panel-footer').animate({height: "0"}, 500);
+
+                setTimeout(function() {
+                    $('.panel.panel-chat > .panel-body').hide();
+                    $('.panel.panel-chat > .panel-footer').hide();
+                }, 500);
+            }
+
+            });
+            $(".panel.panel-chat > .panel-heading > .chatClose").click(function(){
+              console.log($(this).parent().parent());
+                $(this).parent().parent().hide();
+            });
+
+            $('a[href="#item1"]').on('click', function() {
+              if($('.panel').is(":visible")){
+                if($('.panel.panel-chat').hasClass('mini')) {
+                  $('.panel.panel-chat').removeClass('mini').addClass('normal');
+                      $('.panel.panel-chat > .panel-body').animate({height: "250px"}, 500).show();
+                      $('.panel.panel-chat > .panel-footer').animate({height: "75px"}, 500).show();
+                }
+                else {
+                  $('.panel.panel-chat').removeClass('normal').addClass('mini');
+                  $('.panel.panel-chat > .panel-body').animate({height: "0"}, 500);
+                  $('.panel.panel-chat > .panel-footer').animate({height: "0"}, 500);
+
+                  setTimeout(function() {
+                      $('.panel.panel-chat > .panel-body').hide();
+                      $('.panel.panel-chat > .panel-footer').hide();
+                  }, 500);
+                }
+              }
+              else {
+                $('.panel').show();
+              }
+            })
+        })
+        </script>
+    		<style type="text/css">
+    			#sidebar-wrapper {
               top: 52px;
               right: -200px;
               width: 200px;
@@ -238,14 +317,11 @@
 					</div>
 				</div>
 				<div class = "col-lg-10 col-md-9 col-sm-8 col-xs-12 page-info">
-					<nav class="navbar navbar-default" role="navigation">
+					<nav class="navbar navbar-fixed-bottom" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<a id="menu-toggle" href="#" class="navbar-toggle">
-							<span class="sr-only">Toggle navigation</span>
-					        <span class="icon-bar"></span>
-					        <span class="icon-bar"></span>
-					        <span class="icon-bar"></span>
+							<span>Chat</span>
 					</a>
 				</div>
 				<div id="sidebar-wrapper" class="sidebar-toggle">
@@ -254,7 +330,7 @@
 				      		<a href="#item1">
 				      			<table>
 									<tr class="friend">
-										<td style="width: 20%"><img class="pic img-circle img-responsive" src="profile.png"></td>
+										<td style="width: 20%"><img class="pic img-circle img-responsive" src="http://i0.kym-cdn.com/photos/images/original/001/054/924/d3d.png"></td>
 										<td><h5>Name Surname</h5></td>
 									</tr>
 				                </table>
@@ -264,7 +340,7 @@
 				      		<a href="#item2">
 				      			<table>
 									<tr class="friend">
-										<td style="width: 20%"><img class="pic img-circle img-responsive" src="profile.png"></td>
+										<td style="width: 20%"><img class="pic img-circle img-responsive" src="http://i0.kym-cdn.com/photos/images/original/001/054/924/d3d.png"></td>
 										<td><h5>Name Surname</h5></td>
 									</tr>
 				                </table>
@@ -285,7 +361,7 @@
 				      		<a href="#item4">
 				      			<table>
 									<tr class="friend">
-										<td style="width: 20%"><img class="pic img-circle img-responsive" src="profile.png"></td>
+										<td style="width: 20%"><img class="pic img-circle img-responsive" src="http://i0.kym-cdn.com/photos/images/original/001/054/924/d3d.png"></td>
 										<td><h5>Name Surname</h5></td>
 									</tr>
 				                </table>
@@ -306,12 +382,12 @@
 		        </div>
 		        <div class="panel-body">
 		            <div class="messageMe">
-		                <img src="profile.png" alt=""/>
+		                <img src="http://i0.kym-cdn.com/photos/images/original/001/054/924/d3d.png" alt=""/>
 		                <span>bla</span>
 		                <div class="clearFix"></div>
 		            </div>
 		            <div class="messageHer">
-		                <img src="profile.png" alt=""/>
+		                <img src="http://i0.kym-cdn.com/photos/images/original/001/054/924/d3d.png" alt=""/>
 		                <span>bla back</span>
 		                <div class="clearFix"></div>
 		            </div>
