--- a/views/LoginPage.html
+++ b/views/LoginPage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="LoginPage.js"></script>
-		<link rel="stylesheet" type="text/css" href="../style.css">
+		<link rel="stylesheet" type="text/css" href="../public/style.css">
 		<link rel="stylesheet" type="text/css" href="bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="bootstrap-grid.css">
 
