Added pug templates.

--- a/views/LoginPage.html
+++ b/views/LoginPage.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<script src="LoginPage.js"></script>
-		<link rel="stylesheet" type="text/css" href="../public/style.css">
-		<link rel="stylesheet" type="text/css" href="bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="bootstrap-grid.css">
-
-	</head>
-	<body onload="readDescriptionFile()">
+	<body>
 		<h1 class="LoginHeader">Welcome to ACS Peek</h2>
 		<div class = "container-fluid">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-					<div id="firstColumn" class = "containerClass"></div>
+					<div id="firstColumn" class = "containerClass">
+						Text static in loc de text dinamic.
+					</div>
 				</div>
 				
 				<div id="secondColumn" class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -54,4 +48,3 @@
 		</div>
 
 	</body>
-</html>
