--- a/public/style.css
+++ b/public/style.css
@@ -90,3 +90,247 @@ button {
 		min-height: auto;
 	}
 }
+
+
+/* Chat Page Style */
+#sidebar-wrapper {
+  top: 52px;
+  right: -200px;
+  width: 200px;
+  background-color: #5677fc;
+  color: black;
+  position: fixed;
+  bottom: 0px;
+  background-color:white;
+  overflow-y:scroll;
+  overflow-x:hidden;
+  border-left: 1px solid rgba(0,0,0,0.25);
+}
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  list-style: none;
+}
+.sidebar-nav li {
+  text-indent: 20px;
+  line-height: 50px;
+}
+.sidebar-nav li a {
+  color: black;
+  display: block;
+  text-decoration: none;
+  padding-left: 5px;
+}
+.sidebar-nav li a:hover {
+  background: rgba(0,0,0,0.25);
+  color: white;
+  text-decoration: none;
+}
+.sidebar-nav li a:active, .sidebar-nav li a:focus {
+  text-decoration: none;
+}
+#sidebar-wrapper.sidebar-toggle {
+  transition: all 0.3s ease-out;
+  margin-right: -200px;
+}
+@media (min-width: 768px) {
+  #sidebar-wrapper.sidebar-toggle {
+    transition: 0s;
+    right: 200px;
+  }
+}
+.friend {
+  background-color:transparent;
+}
+{
+    -webkit-border-radius: 0px  !important;
+    -moz-border-radius: 0px  !important;
+    border-radius: 0px !important;
+}
+htlm, body
+{
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+.clearFix
+{
+    clear:both;
+}
+.panel.panel-chat
+{
+    position: fixed;
+    bottom:-20px;
+    right:200px;
+    max-width: 300px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+}
+.panel.panel-chat *
+{
+    background: none;
+    border: none;
+}
+.panel.panel-chat .panel-heading
+{
+    background: #4b67a8;
+    border: 1px solid #2e4588;
+    color:#FFF;
+}
+.panel.panel-chat .panel-heading a:nth-of-type(1)
+{
+    text-decoration: none;
+    width: 200px;
+    color:#FFF;
+    font-weight: bold;
+    float:left;
+}
+.panel.panel-chat .panel-heading a:nth-of-type(2)
+{
+    text-decoration: none;
+    max-width: 11px;
+    width: 11px;
+    color:#FFF;
+    float:right;
+}
+.panel.panel-chat .panel-body
+{
+    display: block;
+    padding: 0;
+    margin: 0;
+    max-height: 200px;
+    height: 200px;
+    border-left: 1px solid #b2b2b2;
+    border-right: 1px solid #b2b2b2;
+    background: #EDEFF4;
+    overflow: auto;
+}
+.panel.panel-chat .panel-body::-webkit-scrollbar {
+     display: none;
+ }
+.panel.panel-chat .panel-body .messageMe
+{
+    border-bottom:1px dotted #b2b2b2;
+}
+.panel.panel-chat .panel-body .messageMe img
+ {
+     float:left;
+     max-width: 50px;
+     max-height: 50px;
+ }
+.panel.panel-chat .panel-body .messageMe span
+{
+    display: block;
+    float:left;
+    padding: 5px;
+    background: #FFF;
+    min-height: 50px;
+    max-width: 280px;
+    height: 50px;
+    width: 250px;
+    word-break: break-all;
+}
+.panel.panel-chat .panel-body .messageHer
+{
+    border-bottom:1px dotted #b2b2b2;
+}
+.panel.panel-chat .panel-body .messageHer img
+{
+    float:right;
+    max-width: 50px;
+    max-height: 50px;
+}
+.panel.panel-chat .panel-body .messageHer span
+{
+    display: block;
+    float:right;
+    padding: 5px;
+    background: #FFF;
+    min-height: 50px;
+    max-width: 280px;
+    height: 50px;
+    width: 280px;
+    word-break: break-all;
+}
+.panel.panel-chat .panel-footer
+{
+    padding: 0;
+    margin: 0;
+    border: 1px solid #b2b2b2;
+    max-height: 75px;
+    height: 75px;
+}
+.panel.panel-chat .panel-footer textarea
+{
+    margin-bottom: -5px;
+    resize: none;
+    width: 100%;
+    height: 100%;
+}
+table {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	border: 3px solid;
+	border-collapse: collapse;
+}
+
+th, td {
+	border: 1px solid gray;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+textarea {
+	resize: none;
+	border: 3px solid;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.comments {
+	overflow: auto;
+	margin-top: 20px;
+	height: 150px;
+ 		list-style-type: none;
+ 		border: 3px solid;
+ 		border-collapse: collapse;
+ 		padding: 0;
+ 		margin-left: 0;
+ 		margin-right: 0;
+}
+
+.comments li {
+	border: 1px solid gray;
+	padding: 5px;
+}
+
+.comments li h5 {
+	margin: 0;
+}
+
+.comments li .comm-content {
+	margin: 0;
+}
+
+.comments li .comm-time {
+	font-size: 10px;
+	margin-bottom: 1px;
+}
+
+.comments li:nth-child(even){
+  	background:#ddd;
+}
+
+.fa {
+    font-size: 25px;
+    padding-right: 10px;
+}
+
+.checked {
+    color: orange;
+}
