--- a/views/document_page.pug
+++ b/views/document_page.pug
@@ -8,8 +8,8 @@ html
 			.col-xs-4
 				h1
 					| Titlu document
-				table(width='100%')
-					tr(style='background-color: #ddd;')
+				table.file-details(width='100%')
+					tr(style='background-color: black;')
 						th Size
 						th Uploader
 						th Type
