--- a/public/style.css
+++ b/public/style.css
@@ -270,14 +270,15 @@ htlm, body
     width: 100%;
     height: 100%;
 }
-table {
+
+.file-details {
 	margin-top: 50px;
 	margin-bottom: 50px;
 	border: 3px solid;
 	border-collapse: collapse;
 }
 
-th, td {
+.file-details th, td {
 	border: 1px solid gray;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -285,7 +286,7 @@ th, td {
 	padding-bottom: 5px;
 }
 
-textarea {
+.doc-descr {
 	resize: none;
 	border: 3px solid;
 	margin-top: 20px;
@@ -333,4 +334,101 @@ textarea {
 
 .checked {
     color: orange;
+}
+
+.main-title {
+	margin: 50px;
+  margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.secondary-title {
+  margin: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.all-files-table {
+	margin-left: 50px;
+	margin-bottom: 50px;
+	border: 3px solid;
+	border-collapse: collapse;
+}
+
+.all-files-table thead, tbody {
+  width: 100%;
+  display: block;
+}
+
+.all-files-table th, td {
+  width: 50%;
+	border: 1px solid gray;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.all-files-table th {
+  color: white;
+}
+
+.all-files-table thead {
+  padding-right: 15px;
+}
+
+.all-files-table tbody {
+  height: 500px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.all-files-table tr:nth-child(odd){
+    background:#ddd;
+}
+
+.search-bar {
+  margin-left: 35px;
+}
+
+.search-bar {
+  margin-top: 50px;
+}
+
+.search-bar input[type=text] {
+  max-width: 570px;
+}
+
+.search-bar button {
+  max-width: 30px;
+}
+
+.user-files-table tbody {
+  display: block;
+  height: 250px;
+  border: 3px solid;
+  border-collapse: collapse;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+
+.user-files-table td {
+  border: 1px solid gray;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.user-files-table tr:nth-child(odd){
+    background:#ddd;
+}
+
+.user-files-table .file-actions {
+  padding: 20px;
+}
+
+a {
+  cursor: pointer;
 }
