--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,11 @@
 	margin-bottom: 0px;
 }
 
+.resized {
+  margin-bottom: 0px;
+  height: 10px;
+}
+
 .user-info {
 	border-right: 2px solid #000;
 	min-height: 770px;
@@ -185,7 +190,7 @@ htlm, body
 .panel.panel-chat .panel-heading a:nth-of-type(1)
 {
     text-decoration: none;
-    width: 200px;
+    width: 100px;
     color:#FFF;
     font-weight: bold;
     float:left;
@@ -207,63 +212,65 @@ htlm, body
     height: 200px;
     border-left: 1px solid #b2b2b2;
     border-right: 1px solid #b2b2b2;
-    background: #EDEFF4;
+    background: #FFF;
     overflow: auto;
 }
 .panel.panel-chat .panel-body::-webkit-scrollbar {
      display: none;
  }
-.panel.panel-chat .panel-body .messageMe
-{
-    border-bottom:1px dotted #b2b2b2;
-}
 .panel.panel-chat .panel-body .messageMe img
  {
      float:left;
      max-width: 50px;
      max-height: 50px;
+     border-radius: 40%;
  }
 .panel.panel-chat .panel-body .messageMe span
 {
     display: block;
     float:left;
+    text-align: left;
     padding: 5px;
-    background: #FFF;
+    margin: 5px;
+    padding-left: 10px;
+    background: #EDEFF4;
     min-height: 50px;
-    max-width: 280px;
+    max-width: 200px;
     height: 50px;
-    width: 250px;
+    width: 200px;
     word-break: break-all;
-}
-.panel.panel-chat .panel-body .messageHer
-{
-    border-bottom:1px dotted #b2b2b2;
+    border-radius: 20%;
 }
 .panel.panel-chat .panel-body .messageHer img
 {
     float:right;
     max-width: 50px;
     max-height: 50px;
+    border-radius: 40%;
 }
 .panel.panel-chat .panel-body .messageHer span
 {
     display: block;
     float:right;
+    text-align: right;
     padding: 5px;
-    background: #FFF;
+    margin: 5px;
+    padding-right: 10px;
+    background: #EDEFF4;
     min-height: 50px;
-    max-width: 280px;
+    max-width: 200px;
     height: 50px;
-    width: 280px;
+    width: 200px;
     word-break: break-all;
+    border-radius: 20%;
 }
 .panel.panel-chat .panel-footer
 {
     padding: 0;
     margin: 0;
     border: 1px solid #b2b2b2;
-    max-height: 75px;
-    height: 75px;
+    max-height: 55px;
+    height: 55px;
 }
 .panel.panel-chat .panel-footer textarea
 {
