--- a/views/main_page.pug
+++ b/views/main_page.pug
@@ -4,8 +4,9 @@ html
 	include template.pug
 		.row
 			.col-xs-6.search-bar
-				input(type="text", placeholder="Search..", name="search")
-				button(type="submit")
+				form
+					input(type="text", placeholder="Search..", name="search")
+				//button(type="submit")
 					i.fa.fa-search
 		.row
 			h3.col-xs-5.main-title
