--- a/views/template.pug
+++ b/views/template.pug
@@ -28,9 +28,8 @@ html
 								span.glyphicon.glyphicon-file
 								|  Documente
 						li
-							a(href='#')
-								span.glyphicon.glyphicon-log-in
-								|  Logout
+							form#logout-button(method="post", action="/logout")
+								input(type="submit", name="logout", value="Logout")
 		.container-fluid.body-container
 			.row
 				.col-lg-2.col-md-3.col-sm-4.col-xs-12.user-info
