Added update profile method

--- a/views/update_profile.pug
+++ b/views/update_profile.pug
@@ -9,7 +9,7 @@ html
 				form(method='POST' action='/update-profile')
 					div.form-group
 						label(for='profile-picture') Profile Picture:
-						input#profile-picture.form-control(type='file', placeholder='profile picture' name='profile-picture')
+						input#profile-picture.form-control(type='text', placeholder='profile picture' name='profile-picture')
 					div.form-group
 						label(for='name') Nume:
 						input#name.form-control(type='text', placeholder='first and last' name='name')
