chat redirect added in template

--- a/views/template.pug
+++ b/views/template.pug
@@ -45,5 +45,9 @@ html
 					.profile-option
 						span.glyphicon.glyphicon-star
 						|  Rate Users
+					.profile-option
+						a.href-no-style(href='/go-chat')
+							span.glyphicon.glyphicon-tasks
+							|  Chat
 				.col-lg-10.col-md-9.col-sm-8.col-xs-12.page-info
 					|
