--- a/public/style.css
+++ b/public/style.css
@@ -272,12 +272,10 @@ htlm, body
     max-height: 55px;
     height: 55px;
 }
-.panel.panel-chat .panel-footer #textarea
+.panel.panel-chat .panel-footer #textMessage
 {
-    margin-bottom: -5px;
     resize: none;
     padding: 5px;
-    /*width: 100%;*/
     height: 100%;
 }
 
@@ -286,8 +284,7 @@ htlm, body
     margin-top: -20px;
     background-color: #4b67a8;
     resize: none;
-    /*width: 100%;*/
-    height: 100%;
+    height: 50px;
     color:#FFF;
     font-weight: bold;
     padding: 5px;
