--- a/views/document_page.pug
+++ b/views/document_page.pug
@@ -1,6 +1,12 @@
 doctype html
 html
 	include head.pug
+	script.
+		function rateFunction() {
+			rate = $('#RatingButtons input:checked').val()
+			alert(rate);
+			//$('#RatingButtons).submit();
+		}
 	include template.pug
 		.row.doc_page
 			img.col-xs-3.document-image(src='http://pngimages.net/sites/default/files/document-png-image-54169.png')
@@ -30,6 +36,17 @@ html
 				span.fa.fa-star.checked
 				span.fa.fa-star
 				span.fa.fa-star
+				form(onchange="rateFunction()" id='RatingButtons')
+					input(type='radio' name='rate' value='1')
+					| 1 
+					input(type='radio' name='rate' value='2')
+					| 2 
+					input(type='radio' name='rate' value='3')
+					| 3 
+					input(type='radio' name='rate' value='4')
+					| 4 
+					input(type='radio' name='rate' value='5')
+					| 5 
 				p 3.1 average based on 254 reviews.
 		.row.doc_page
 			ul.col-xs-8.comments
