--- a/views/template.pug
+++ b/views/template.pug
@@ -49,5 +49,5 @@ html
 					|
 		script(type="text/javascript").
 			$(function () {
-				document.getElementById('pic').src = '#{profile_picture}'
+				document.getElementById('pic').src = '#{profile_picture}';
 			})
