Fixed user info.

--- a/views/update_profile.pug
+++ b/views/update_profile.pug
@@ -9,7 +9,7 @@ html
 				form(method='POST' action='/update-profile')
 					div.form-group
 						label(for='profile-picture') Profile Picture:
-						input#profile-picture.form-control(type='text', placeholder='profile picture' name='profile-picture')
+						input#profile_picture.form-control(type='text', placeholder='profile picture' name='profile_picture')
 					div.form-group
 						label(for='name') Nume:
 						input#name.form-control(type='text', placeholder='first and last' name='name')
@@ -18,7 +18,7 @@ html
 						input#email.form-control(type='email', placeholder='name@email.com' name='email')
 					div.form-group
 						label(for='faculty') Facultate:
-						input#favoriteBook.form-control(type='text', placeholder='facultate' name='faculty')
+						input#faculty.form-control(type='text', placeholder='facultate' name='faculty')
 					div.form-group
 						label(for='spec') Specializare:
 						input#spec.form-control(type='text' placeholder='C4/CTI/IS' name='spec')
